--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
   align-items: center;
   width: 100%;
   position: absolute;
+  padding: 20px;
   text-align: center;
 }
 
@@ -259,7 +260,7 @@ img {
     font-size: 2.5rem;
   }
   p {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -355,7 +356,7 @@ h4 {
 .tittle-course {
   color: #0f0f0f;
   margin-top: 25px;
-  text-decoration: #0f0f0f;
+  text-decoration: underline #0f0f0f;
 }
 
 .row-courses {
